Run under older Ubuntu version for Python 3.6
Python 3.6 is not installable using actions/setup-python under Ubuntu 22.04.

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -16,7 +16,7 @@ name: Check PR
 jobs:
   unittest:
     name: python${{ matrix.python-version }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     strategy:
       matrix:
