[O2-3609] Limit GitHub workflow permissions

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -13,6 +13,9 @@ name: Check PR
     branches:
       - master
 
+permissions:
+  contents: read
+
 jobs:
   unittest:
     name: python${{ matrix.python-version }}
