[O2-3609] Limit GitHub workflow permissions (#796)
* [O2-3609] Limit GitHub workflow permissions

* Remove unsupported Python 2 test

The setup-python workflow doesn't support Python 2.7 any more, and getting it
to work any other way is very fiddle. We don't use Python 2 any more anyway --
the only use case would be to reproduce ancient builds on slc6, in which case
we can use alibuild<=1.14.4.

* Reduce workflow permissions further

We don't need `contents: read` as the repo contents are public.

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -13,6 +13,8 @@ name: Check PR
     branches:
       - master
 
+permissions: {}
+
 jobs:
   unittest:
     name: python${{ matrix.python-version }}
@@ -21,7 +23,6 @@ jobs:
     strategy:
       matrix:
         python-version:
-          - '2.7'
           - '3.6.8'   # slc7, slc8 and cs8 containers
           - '3.7'
           - '3.8'
