[O2-4412] Dynamically compute optional dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = 'alibuild'
-dynamic = ['readme', 'version']
+dynamic = ['readme', 'version', 'optional-dependencies']
 description = 'ALICE Build Tool'
 keywords = ['HEP', 'ALICE']
 license = {text = 'GPL'}
