--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: "Alibuild: ALICE software builder"
+site_name: "aliBuild: ALICE software builder"
 repo_name: View source code
 repo_url: https://github.com/alisw/alibuild
 
@@ -12,7 +12,7 @@ nav:
   - Quickstart: quick.md
   - User manual: user.md
   - Reference: reference.md
-  - Alice/O2 tutorial: "https://alice-doc.github.io/alice-analysis-tutorial/building/"
+  - ALICE/O2 tutorial: "https://alice-doc.github.io/alice-analysis-tutorial/building/"
 
 markdown_extensions:
   # Syntax hightlighting for code blocks
