--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -4,6 +4,9 @@ repo_url: https://github.com/alisw/alibuild
 
 theme:
   name: material
+  logo: alice_logo.png
+
+extra_css: [stylesheets/extra.css]
 
 use_directory_urls: false
 
