--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -66,7 +66,7 @@ jobs:
 
   mac-unittest:
     name: mac-python${{ matrix.python-version }}
-    runs-on: macos-latest
+    runs-on: macos-14
 
     strategy:
       fail-fast: false   # continue executing other checks if one fails
@@ -84,6 +84,9 @@ jobs:
 
       - name: Install test dependencies
         run: |
+          # Hack to remove whatever the CI default image brings now, as it
+          # conflicts with the one in o2-full-deps [O2-5580]
+          brew uninstall --ignore-dependencies --force pkg-config@0.29.2 
           brew install modules alisw/system-deps/o2-full-deps sapling
           python3 -m pip install --upgrade tox tox-gh-actions coverage
 
