Renaming aliBuild -> bitsBuild, including all environemnt variables

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,7 +1,7 @@
 ---
 coverage:
   fixes:
-    - "alibuild/::"
+    - "bits/::"
 # Disable long, annoying overview comment in PRs; only set statuses with links
 # to codecov.io.
 comment: false
