--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ commands =
     flake8 . --config {toxinidir}/.flake8 --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     #find . -name .git -prune -false -o -name .tox -prune -false -o -iname '*.py' \
     #     -exec pylint -j 0 --rcfile {toxinidir}/.pylintrc \{\} +
-    #pylint -j 0 --rcfile .pylintrc aliBuild aliDeps aliDoctor pb
+    #pylint -j 0 --rcfile .pylintrc bitsBuild bitsDeps bitsDoctor pb
 
 [testenv]
 description = run test suite under {envname}
@@ -68,71 +68,71 @@ changedir = {envtmpdir}
 commands =
     # The first coverage command shouldn't have an -a, so we completely replace
     # the coverage info from the last run.
-    coverage run --source={toxinidir} {toxinidir}/aliBuild analytics off
-    test -e .config/alibuild/disable-analytics
-    test ! -e .config/alibuild/analytics-uuid
-    coverage run --source={toxinidir} -a {toxinidir}/aliBuild analytics on
-    test ! -e .config/alibuild/disable-analytics
-    test -e .config/alibuild/analytics-uuid
-    coverage run --source={toxinidir} -a {toxinidir}/aliBuild analytics off
-    test -e .config/alibuild/disable-analytics
-    test -e .config/alibuild/analytics-uuid
+    coverage run --source={toxinidir} {toxinidir}/bitsBuild analytics off
+    test -e .config/bits/disable-analytics
+    test ! -e .config/bits/analytics-uuid
+    coverage run --source={toxinidir} -a {toxinidir}/bitsBuild analytics on
+    test ! -e .config/bits/disable-analytics
+    test -e .config/bits/analytics-uuid
+    coverage run --source={toxinidir} -a {toxinidir}/bitsBuild analytics off
+    test -e .config/bits/disable-analytics
+    test -e .config/bits/analytics-uuid
 
-    coverage run --source={toxinidir} -a {toxinidir}/aliBuild version
+    coverage run --source={toxinidir} -a {toxinidir}/bitsBuild version
 
     coverage run --source={toxinidir} -a -m unittest discover {toxinidir}/tests
 
     git clone -b O2-v1.3.0 --depth 1 https://github.com/alisw/alidist
 
-    coverage run --source={toxinidir} -a {toxinidir}/aliBuild -a {env:ARCHITECTURE} -z test-init init zlib
+    coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -a {env:ARCHITECTURE} -z test-init init zlib
     # This command is expected to fail, but run it for the coverage anyway.
     # A leading "-" means tox ignores the exit code.
-    - coverage run --source={toxinidir} -a {toxinidir}/aliBuild build non-existing -a {env:ARCHITECTURE} --no-system --disable GCC-Toolchain
+    - coverage run --source={toxinidir} -a {toxinidir}/bitsBuild build non-existing -a {env:ARCHITECTURE} --no-system --disable GCC-Toolchain
 
     # TODO: do we need these? This seems to be at least partially covered by
     # unit tests in tests/tests_parseRecipe.py.
-    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/aliBuild -c {toxinidir}/tests/testdist build broken1 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Header missing"'
-    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/aliBuild -c {toxinidir}/tests/testdist build broken2 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Empty recipe"'
-    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/aliBuild -c {toxinidir}/tests/testdist build broken3 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Unable to parse"'
-    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/aliBuild -c {toxinidir}/tests/testdist build broken4 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Malformed header"'
-    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/aliBuild -c {toxinidir}/tests/testdist build broken5 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Missing package"'
-    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/aliBuild -c {toxinidir}/tests/testdist build broken6 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "while scanning a quoted scalar"'
-    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/aliBuild -c {toxinidir}/tests/testdist build broken7 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Malformed entry prefer_system"'
+    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -c {toxinidir}/tests/testdist build broken1 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Header missing"'
+    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -c {toxinidir}/tests/testdist build broken2 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Empty recipe"'
+    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -c {toxinidir}/tests/testdist build broken3 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Unable to parse"'
+    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -c {toxinidir}/tests/testdist build broken4 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Malformed header"'
+    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -c {toxinidir}/tests/testdist build broken5 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Missing package"'
+    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -c {toxinidir}/tests/testdist build broken6 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "while scanning a quoted scalar"'
+    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -c {toxinidir}/tests/testdist build broken7 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Malformed entry prefer_system"'
 
     # Make sure that etc/profile.d/init.sh is re-written properly, even if the package build overwrites it.
     # In particular, AliEn-Runtime does this, so we must handle this.
-    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/aliBuild -c {toxinidir}/tests/testdist build clobber-initdotsh -a {env:ARCHITECTURE} --no-system --no-remote-store >&2 && WORK_DIR=$PWD/sw . sw/{env:ARCHITECTURE}/clobber-initdotsh/1-local1/etc/profile.d/init.sh'
+    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -c {toxinidir}/tests/testdist build clobber-initdotsh -a {env:ARCHITECTURE} --no-system --no-remote-store >&2 && WORK_DIR=$PWD/sw . sw/{env:ARCHITECTURE}/clobber-initdotsh/1-local1/etc/profile.d/init.sh'
     # AliRoot-OCDB deletes $INSTALLROOT/etc/ during build, so make sure we can handle that fine too.
-    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/aliBuild -c {toxinidir}/tests/testdist build delete-etc -a {env:ARCHITECTURE} --no-system --no-remote-store >&2 && WORK_DIR=$PWD/sw . sw/{env:ARCHITECTURE}/delete-etc/1-local1/etc/profile.d/init.sh'
+    sh -c 'coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -c {toxinidir}/tests/testdist build delete-etc -a {env:ARCHITECTURE} --no-system --no-remote-store >&2 && WORK_DIR=$PWD/sw . sw/{env:ARCHITECTURE}/delete-etc/1-local1/etc/profile.d/init.sh'
 
-    coverage run --source={toxinidir} -a {toxinidir}/aliBuild build zlib -a {env:ARCHITECTURE} --no-system --disable GCC-Toolchain
+    coverage run --source={toxinidir} -a {toxinidir}/bitsBuild build zlib -a {env:ARCHITECTURE} --no-system --disable GCC-Toolchain
     alienv -a {env:ARCHITECTURE} q
     alienv -a {env:ARCHITECTURE} setenv zlib/latest -c bash -c '[[ $LD_LIBRARY_PATH == */zlib/* ]]'
-    coverage run --source={toxinidir} -a {toxinidir}/aliBuild -a {env:ARCHITECTURE} doctor AliPhysics
-    coverage run --source={toxinidir} -a {toxinidir}/aliBuild -a {env:ARCHITECTURE} build zlib --dry-run
-    py311: coverage run --source={toxinidir} -a {toxinidir}/aliBuild --aggressive-cleanup --docker -a slc7_x86-64 --always-prefer-system -d build zlib
+    coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -a {env:ARCHITECTURE} doctor AliPhysics
+    coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -a {env:ARCHITECTURE} build zlib --dry-run
+    py311: coverage run --source={toxinidir} -a {toxinidir}/bitsBuild --aggressive-cleanup --docker -a slc7_x86-64 --always-prefer-system -d build zlib
     # Test for devel packages
-    coverage run --source={toxinidir} -a {toxinidir}/aliBuild init zlib
-    py311: coverage run --source={toxinidir} -a {toxinidir}/aliBuild --aggressive-cleanup --docker -a slc7_x86-64 --always-prefer-system -d build zlib
+    coverage run --source={toxinidir} -a {toxinidir}/bitsBuild init zlib
+    py311: coverage run --source={toxinidir} -a {toxinidir}/bitsBuild --aggressive-cleanup --docker -a slc7_x86-64 --always-prefer-system -d build zlib
     # Test that we complain if we have a devel package with an untracked file
-    coverage run --source={toxinidir} -a {toxinidir}/aliBuild init zlib
+    coverage run --source={toxinidir} -a {toxinidir}/bitsBuild init zlib
     touch zlib/foo
-    coverage run --source={toxinidir} -a {toxinidir}/aliBuild -a {env:ARCHITECTURE} --no-system --disable GCC-Toolchain build zlib
+    coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -a {env:ARCHITECTURE} --no-system --disable GCC-Toolchain build zlib
     coverage run --source={envsitepackagesdir} -a -m unittest discover {toxinidir}/tests
     # On Darwin we also test sapling support
     darwin: sl clone https://github.com/alisw/alidist alidist-sapling
-    darwin: coverage run --source={toxinidir} -a {toxinidir}/aliBuild -a {env:ARCHITECTURE} -c alidist-sapling --no-system --disable GCC-Toolchain build zlib
+    darwin: coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -a {env:ARCHITECTURE} -c alidist-sapling --no-system --disable GCC-Toolchain build zlib
     darwin: rm -fr zlib
     darwin: sl clone https://github.com/alisw/zlib
-    darwin: coverage run --source={toxinidir} -a {toxinidir}/aliBuild -a {env:ARCHITECTURE} --no-system --disable GCC-Toolchain build zlib
+    darwin: coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -a {env:ARCHITECTURE} --no-system --disable GCC-Toolchain build zlib
     touch zlib/foo
-    darwin: coverage run --source={toxinidir} -a {toxinidir}/aliBuild -a {env:ARCHITECTURE} --no-system --disable GCC-Toolchain build zlib
+    darwin: coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -a {env:ARCHITECTURE} --no-system --disable GCC-Toolchain build zlib
 
 [coverage:run]
 branch = True
 include =
     */alibuild*/*
-    */.tox/*/lib/*/alibuild_helpers/*
+    */.tox/*/lib/*/bits_helpers/*
 
 [coverage:report]
 exclude_lines =
