--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: python3-alibuild
+Source: python3-bits
 Maintainer: Giulio Eulisse <giulio.eulisse@cern.ch>
 Build-Depends: debhelper,dh-python,python3-all,python3-setuptools,python3-setuptools-scm
 Section: devel
@@ -6,9 +6,9 @@ Priority: optional
 Standards-Version: 3.9.6
 X-Python3-Version: >= 3.6
 
-Package: python3-alibuild
+Package: python3-bits
 Architecture: all
-Description: ALICE build tool.
-	Please refer to https://alisw.github.io/alibuild for full documentation.
+Description: Software build tool.
+	Please refer to https://github.com/bitsorg/bits for full documentation.
 Depends: ${python3:Depends},python3-requests,python3-yaml
 Recommends: pigz
