--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,7 @@
 #! /usr/bin/make -f
 
 #export DH_VERBOSE = 1
-export PYBUILD_NAME = python3-alibuild
+export PYBUILD_NAME = python3-bits
 
 %:
 	dh $@ --with python3 --buildsystem=pybuild
