Handle changes in argparse (#898)
Use regular expressions to make sure we handle small differences in the
error messages due to formatting of the arguments done by different
versions of python.

Co-authored-by: Sergio <sergio.garcia.de.la.cruz@cern.ch>

--- a/tox.ini
+++ b/tox.ini
@@ -74,7 +74,7 @@ commands =
 
     coverage run --source={toxinidir} -a -m unittest discover {toxinidir}/tests
 
-    git clone -b O2-v1.3.0 --depth 1 https://github.com/alisw/alidist
+    git clone -b alibuild_CI --depth 1 https://github.com/alisw/alidist
 
     coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -a {env:ARCHITECTURE} -z test-init init zlib
     # This command is expected to fail, but run it for the coverage anyway.
