--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ requests
 pyyaml
 distro
 jinja2
-boto3==1.35.95; python_version >= '3.6' # https://github.com/boto/boto3/issues/4398
+# https://github.com/boto/boto3/issues/4398
+# This version is the last compatible with python 3.6.8
+boto3==1.23.10; python_version >= '3.6'
