--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = [
     'Programming Language :: Python :: 3.10',  # ubuntu2204
     'Programming Language :: Python :: 3.11',  # MacOS
     'Programming Language :: Python :: 3.12',  # MacOS
+    'Programming Language :: Python :: 3.13',  # MacOS
 ]
 
 dependencies = [
@@ -31,7 +32,7 @@ dependencies = [
   'requests',
   'distro',
   'jinja2',
-  'boto3',
+  'boto3==1.23.10',
 ]
 
 [project.urls]
