--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -110,20 +110,21 @@ jobs:
         with:
           files: coverage.json
 
-  lint:
-    name: lint
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.x
-
-      - name: Install dependencies
-        run: python -m pip install --upgrade tox tox-gh-actions
-
-      - name: Run linters
-        run: tox -e lint
+  # Temporarily disabled until we decide whether to follow PEP8 or not
+  # lint:
+  #   name: lint
+  #   runs-on: ubuntu-latest
+  #
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v5
+  #       with:
+  #         python-version: 3.x
+  #
+  #     - name: Install dependencies
+  #       run: python -m pip install --upgrade tox tox-gh-actions
+  #
+  #     - name: Run linters
+  #       run: tox -e lint
