--- a/tox.ini
+++ b/tox.ini
@@ -14,24 +14,24 @@ python =
     3.12: py312
     3.13: py313
 
-[testenv:lint]
-# Warning: This environment inherits settings from the main [testenv] section.
-description = run code linters
-basepython = python3
-allowlist_externals =
-    find
-deps =
-    flake8
-    pylint
-changedir = {toxinidir}
-commands =
-    # stop the build if there are Python syntax errors or undefined names
-    flake8 . --config {toxinidir}/.flake8 --count --select=E9,F63,F7,F82 --show-source --statistics
-    # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-    flake8 . --config {toxinidir}/.flake8 --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    #find . -name .git -prune -false -o -name .tox -prune -false -o -iname '*.py' \
-    #     -exec pylint -j 0 --rcfile {toxinidir}/.pylintrc \{\} +
-    #pylint -j 0 --rcfile .pylintrc bitsBuild bitsDeps bitsDoctor pb
+; [testenv:lint]
+; # Warning: This environment inherits settings from the main [testenv] section.
+; description = run code linters
+; basepython = python3
+; allowlist_externals =
+;     find
+; deps =
+;     flake8
+;     pylint
+; changedir = {toxinidir}
+; commands =
+;     # stop the build if there are Python syntax errors or undefined names
+;     flake8 . --config {toxinidir}/.flake8 --count --select=E9,F63,F7,F82 --show-source --statistics
+;     # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+;     flake8 . --config {toxinidir}/.flake8 --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+;     #find . -name .git -prune -false -o -name .tox -prune -false -o -iname '*.py' \
+;     #     -exec pylint -j 0 --rcfile {toxinidir}/.pylintrc \{\} +
+;     #pylint -j 0 --rcfile .pylintrc bitsBuild bitsDeps bitsDoctor pb
 
 [testenv]
 description = run test suite under {envname}
