--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,4 @@ pyyaml
 distro
 jinja2
 # https://github.com/boto/boto3/issues/4398
-# This version is the last compatible with python 3.6.8
-boto3==1.23.10; python_version >= '3.6'
+boto3<1.36.0
