--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
 build-backend = "setuptools.build_meta"
 
 [project]
+requires-python = ">= 3.8"
 name = 'alibuild'
 dynamic = ['readme', 'version']
 description = 'ALICE Build Tool'
