--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
 minversion = 3.20
-envlist = lint, py{36, 37, 38, 39, 310, 311, 312, 313}, darwin
+envlist = lint, py{37, 38, 39, 310, 311, 312, 313}, darwin
 
 [gh-actions]
 # The "lint" job is run separately.
 python =
-    3.6: py36
     3.7: py37
     3.8: py38
     3.9: py39
