--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,30 +9,26 @@ permissions:
   contents: read  # required for github.ref to be set
 
 jobs:
-  pypi:
-    name: Publish release on PyPI
+  pypi-publish:
+    name: Upload release to PyPI
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
+    environment:
+      name: pypi
+      url: https://pypi.org/p/alibuild
+    permissions:
+      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
-      - name: Checkout alibuild
-        uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.x
-      - name: Install build dependencies   # needed by our setup.py
-        run: python -m pip install setuptools
-      - name: Build the Python distribution
-        run: python setup.py sdist
-      - name: Publish distribution to PyPI
-        uses: pypa/gh-action-pypi-publish@v1.5.0
-        with:
-          user: __token__
-          password: ${{ secrets.pypi_password }}
+    # retrieve your distributions here
+    - name: Install build dependencies
+      run: python -m pip install --upgrade setuptools build pip
+    - name: Build the Python distribution
+      run: python -m build
+    - name: Publish package distributions to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
 
   brew:
     name: Update Homebrew formula
-    needs: pypi
+    needs: pypi-publish
     runs-on: macos-latest
     if: startsWith(github.ref, 'refs/tags/') && !github.event.release.prerelease
     steps:
