--- a/tox.ini
+++ b/tox.ini
@@ -97,8 +97,8 @@ commands =
     sh -c 'coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -c {toxinidir}/tests/testdist build delete-etc -a {env:ARCHITECTURE} --no-system --no-remote-store >&2 && WORK_DIR=$PWD/sw . sw/{env:ARCHITECTURE}/delete-etc/1-local1/etc/profile.d/init.sh'
 
     coverage run --source={toxinidir} -a {toxinidir}/bitsBuild build zlib -a {env:ARCHITECTURE} --no-system --disable GCC-Toolchain
-    alienv -a {env:ARCHITECTURE} q
-    alienv -a {env:ARCHITECTURE} setenv zlib/latest -c bash -c '[[ $LD_LIBRARY_PATH == */zlib/* ]]'
+    bits -a {env:ARCHITECTURE} q
+    bits -a {env:ARCHITECTURE} setenv zlib/latest -c bash -c '[[ $LD_LIBRARY_PATH == */zlib/* ]]'
     coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -a {env:ARCHITECTURE} doctor AliPhysics
     coverage run --source={toxinidir} -a {toxinidir}/bitsBuild -a {env:ARCHITECTURE} build zlib --dry-run
     py311: coverage run --source={toxinidir} -a {toxinidir}/bitsBuild --aggressive-cleanup --docker -a slc7_x86-64 --always-prefer-system -d build zlib
