--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,9 @@ jobs:
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
-    # retrieve your distributions here
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: Install build dependencies
       run: python -m pip install --upgrade setuptools build pip
     - name: Build the Python distribution
