--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -129,3 +129,22 @@ jobs:
   #
   #     - name: Run linters
   #       run: tox -e lint
+    
+  check-readme:
+    name: Check README
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
+
+      - name: Install dependencies
+        run: python -m pip install --upgrade tox tox-gh-actions
+
+      - name: Run README check
+        run: tox -e check-readme
+
