Fix the license metadata

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ name = 'alibuild'
 dynamic = ['readme', 'version']
 description = 'ALICE Build Tool'
 keywords = ['HEP', 'ALICE']
-license = { file = 'LICENSE' }
+license = "GPL-3.0-only"
+license-files = ["LICENSE[.]md"]
 authors = [
   {name = 'Giulio Eulisse', email = 'giulio.eulisse@cern.ch'},
   {name = 'Timo Wilken', email = 'timo.wilken@cern.ch'},
