Revert "Fix the license metadata"
This reverts commit d0b6a7065146de333536d07274aa5ad842d449d1.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,7 @@ name = 'alibuild'
 dynamic = ['readme', 'version']
 description = 'ALICE Build Tool'
 keywords = ['HEP', 'ALICE']
-license = "GPL-3.0-only"
-license-files = ["LICENSE[.]md"]
+license = { file = 'LICENSE' }
 authors = [
   {name = 'Giulio Eulisse', email = 'giulio.eulisse@cern.ch'},
   {name = 'Timo Wilken', email = 'timo.wilken@cern.ch'},
