Add Python tests for 3.14

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.20
-envlist = lint, py{37, 38, 39, 310, 311, 312, 313}, darwin
+envlist = lint, py{37, 38, 39, 310, 311, 312, 313, 314}, darwin
 
 [gh-actions]
 # The "lint" job is run separately.
@@ -12,6 +12,7 @@ python =
     3.11: py311
     3.12: py312
     3.13: py313
+    3.14: py314
 
 ; [testenv:lint]
 ; # Warning: This environment inherits settings from the main [testenv] section.
