Fix darwin tests in new macos
zlib<1.3.1 doesn't build in the newer XCode. I'm bumping the zlib
version and fixing the architecture for the macOS ARM tests in general

--- a/tox.ini
+++ b/tox.ini
@@ -121,7 +121,7 @@ commands =
     darwin: sl clone https://github.com/alisw/alidist alidist-sapling
     darwin: coverage run --source={toxinidir} -a {toxinidir}/aliBuild -a {env:ARCHITECTURE} -c alidist-sapling --no-system --disable GCC-Toolchain build zlib
     darwin: rm -fr zlib
-    darwin: sl clone https://github.com/alisw/zlib
+    darwin: sl clone https://github.com/madler/zlib
     darwin: coverage run --source={toxinidir} -a {toxinidir}/aliBuild -a {env:ARCHITECTURE} --no-system --disable GCC-Toolchain build zlib
     touch zlib/foo
     darwin: coverage run --source={toxinidir} -a {toxinidir}/aliBuild -a {env:ARCHITECTURE} --no-system --disable GCC-Toolchain build zlib
