Fix sha256 issues with new brew auto update

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
           json=$(curl -fSsL "https://pypi.org/pypi/alibuild/${version}/json")
           sha=$(echo "$json" | jq -r '.urls.[] | select(.filename | endswith(".tar.gz")) | .digests.sha256')
           url=$(echo "$json" | jq -r '.urls.[] | select(.filename | endswith(".tar.gz")) | .url')
-          brew bump-formula-pr --write-only alibuild --url https://pypi.org/project/alibuild --version "${version}" --sha256 "${sha}"
+          brew bump-formula-pr --write-only alibuild --url "${url}" --sha256 "${sha}"
       - name: Push updated formula
         run: |
           set -x
