Fix homebrew again

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,9 @@ jobs:
           sha=$(echo "$json" | jq -r '.urls.[] | select(.filename | endswith(".tar.gz")) | .digests.sha256')
           url=$(echo "$json" | jq -r '.urls.[] | select(.filename | endswith(".tar.gz")) | .url')
 
-          export PIP_BREAK_SYSTEM_PACKAGES=1 # brew bump-formula-pr tries to use pip internally
+          # Remove PEP 668 EXTERNALLY-MANAGED marker so pip can run for dependency resolution
+          find /opt/homebrew/Cellar/python@3.14 -name 'EXTERNALLY-MANAGED' -delete 2>/dev/null || true
+
           brew bump-formula-pr --write-only alibuild --url "${url}" --sha256 "${sha}"
       - name: Push updated formula
         run: |
